<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_avatar_github"
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF909090"
                app:layout_constraintTop_toTopOf="@+id/cl_layout"
                app:layout_constraintStart_toStartOf="@+id/cl_layout"/>

        <TextView
                android:id="@+id/tv_username_github"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/img_avatar_github"
                app:layout_constraintTop_toTopOf="@id/cl_layout"
                app:layout_constraintEnd_toEndOf="@id/cl_layout"/>

        <TextView
                android:id="@+id/tv_name_github"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintTop_toBottomOf="@id/tv_username_github"
                app:layout_constraintStart_toStartOf="@id/tv_username_github"
                app:layout_constraintEnd_toEndOf="@id/cl_layout"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tv_name_github"
                app:layout_constraintEnd_toEndOf="@id/cl_layout">

            <TextView
                    android:id="@+id/tv_follower_github"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_number"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:drawableStart="@drawable/ic_people"
                    android:drawablePadding="3dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/followers"
                    android:textSize="12sp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>