<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailUsersActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp">


        <FrameLayout
                android:id="@+id/fl_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                    android:id="@+id/img_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_default_image"
                    android:background="@color/colorPrimaryDark"
                    android:contentDescription="@string/image_github_user"/>
        </FrameLayout>

        <LinearLayout
                android:id="@+id/ll_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:padding="5dp"
                app:layout_constraintTop_toBottomOf="@+id/fl_image"
                app:layout_constraintStart_toStartOf="parent">

            <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"/>
        </LinearLayout>

        <Button
                android:id="@+id/btn_follow"
                android:background="@drawable/btn_oval"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:text="@string/btn_follow"
                android:textAllCaps="false"
                android:textColor="#2D2019"
                android:textSize="14sp"
                android:lineSpacingExtra="6dp"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintTop_toBottomOf="@+id/fl_image"
                app:layout_constraintStart_toStartOf="@id/ll_username"
                app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
                android:id="@+id/ll_number"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:padding="5dp"
                app:layout_constraintTop_toBottomOf="@+id/ll_username"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <androidx.cardview.widget.CardView
                    android:id="@+id/cv_repository"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    app:cardElevation="3dp"
                    app:cardCornerRadius="3dp">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:id="@+id/tv_title_repository"
                            android:text="@string/repository"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_centerHorizontal="true"/>
                    <TextView
                            android:id="@+id/tv_repository"
                            android:text="@string/default_number"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_below="@id/tv_title_repository"
                            android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:id="@+id/cv_follower"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    app:cardElevation="3dp"
                    app:cardCornerRadius="3dp">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:id="@+id/tv_title_follower"
                            android:text="@string/follower"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_centerHorizontal="true"/>
                    <TextView
                            android:id="@+id/tv_follower"
                            android:text="@string/default_number"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_below="@id/tv_title_follower"
                            android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:id="@+id/cv_following"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    app:cardElevation="3dp"
                    app:cardCornerRadius="3dp">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:id="@+id/tv_title_following"
                            android:text="@string/following"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_centerHorizontal="true"/>
                    <TextView
                            android:id="@+id/tv_following"
                            android:text="@string/default_number"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_below="@id/tv_title_following"
                            android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/ll_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:padding="5dp"
                app:layout_constraintTop_toBottomOf="@+id/ll_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"/>
            <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:drawableStart="@drawable/ic_perm_identity"
                    android:drawablePadding="10dp"
                    android:layout_marginBottom="5dp"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/company"
                    android:textSize="14sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"/>
            <TextView
                    android:id="@+id/tv_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/company"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:drawableStart="@drawable/ic_domain"
                    android:drawablePadding="10dp"
                    android:layout_marginBottom="5dp"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textSize="14sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"/>
            <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:drawableStart="@drawable/ic_place"
                    android:drawablePadding="10dp"
                    android:layout_marginBottom="5dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>